# pygments-style-solarized

./: .gitignore  AUTHORS.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  buildout.cfg  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yaml
pygments_style_solarized/: __init__.py  dark.py  light.py
src/pygments_style_solarized/: __init__.py  dark.py  light.py
tests/: test_styles.py
