[tool.poetry]
name = "pygments-style-solarized"
version = "0.2.0"
description = "The Solarized theme for Pygments."
authors = ["shkumagai <take.this.2.your.grave@gmail.com>"]
homepage = "https://github.com/shkumagai/pygments-style-solarized"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
packages = [
    { include = "pygments_style_solarized.py", from = "src" },
]
readme = "README.rst"
include = [
    "AUTHORS.rst",
    "HISTORY.rst",
    "LICENSE",
]

[tool.poetry.plugins."pygments.styles"]
"solarizedlight" = "pygments_style_solarized:LightStyle"
"solarizeddark" = "pygments_style_solarized:DarkStyle"

[tool.poetry.dependencies]
python = "^3.6"
pygments = ">=1.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
tox = "^3.24.3"
pytest = "^6.2.4"

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.black]
target-version = ["py38"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
